--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,27 @@
 anyio==3.5.0
-appnope @ file:///home/conda/feedstock_root/build_artifacts/appnope_1649077682618/work
-argon2-cffi @ file:///home/conda/feedstock_root/build_artifacts/argon2-cffi_1640817743617/work
-argon2-cffi-bindings @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi-bindings_1640855205774/work
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1618968359944/work
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1640799537051/work
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+attrs==21.4.0
 Babel==2.9.1
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1631087867185/work
-bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1629908509068/work
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+beautifulsoup4==4.10.0
+bleach==4.1.0
 certifi==2021.10.8
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1636046170920/work
+cffi==1.15.0
 chardet==3.0.4
 charset-normalizer==2.0.12
 click==8.1.2
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1636043561340/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1643888246732/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1646044401614/work
-fastjsonschema @ file:///home/conda/feedstock_root/build_artifacts/python-fastjsonschema_1641751198313/work/dist
+debugpy==1.5.1
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+executing==0.8.3
+fastjsonschema==2.15.3
 filelock==3.6.0
-flit_core @ file:///home/conda/feedstock_root/build_artifacts/flit-core_1645629044586/work/source/flit_core
+flit_core==3.7.1
 googletrans==3.1.0a0
 h11==0.9.0
 h2==3.2.0
@@ -32,74 +32,78 @@ httpx==0.13.3
 huggingface-hub==0.5.0
 hyperframe==5.2.0
 idna==2.10
-importlib-metadata @ file:///Users/runner/miniforge3/conda-bld/importlib-metadata_1648728327991/work
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1648277295813/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1649090966920/work/dist/ipykernel-6.12.1-py3-none-any.whl
-ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1648413604633/work
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
+ipykernel==6.12.1
+ipython==8.2.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.0
-jedi @ file:///Users/runner/miniforge3/conda-bld/jedi_1649067453550/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1648299710939/work
+jedi==0.18.1
+Jinja2==3.1.1
 joblib==1.1.0
 json5==0.9.6
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema-meta_1642000296051/work
-jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1648664435131/work
-jupyter-core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1645024586188/work
+jsonschema==4.4.0
+jupyter-client==7.2.1
+jupyter-core==4.9.2
 jupyter-server==1.16.0
-jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
+jupyterlab-pygments==0.1.2
 jupyterlab-server==2.12.0
 jupyterlab-widgets==1.1.0
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1648737610588/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1631080358261/work
-mistune @ file:///Users/runner/miniforge3/conda-bld/mistune_1635844814827/work
-nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1646999386773/work
-nbconvert @ file:///home/conda/feedstock_root/build_artifacts/nbconvert-meta_1648822144012/work
-nbformat @ file:///home/conda/feedstock_root/build_artifacts/nbformat_1649105480291/work
-nest-asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1648959695634/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1647377876077/work
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+mistune==0.8.4
+nbclient==0.5.13
+nbconvert==6.4.5
+nbformat==5.3.0
+nest-asyncio==1.5.5
+notebook==6.4.10
 numpy==1.22.3
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1637239678211/work
-pandocfilters @ file:///home/conda/feedstock_root/build_artifacts/pandocfilters_1631603243851/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1638334955874/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+packaging==21.3
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.1.0
-prometheus-client @ file:///home/conda/feedstock_root/build_artifacts/prometheus_client_1649219419034/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1649130487073/work
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1648873054630/work
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1642875951954/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1641580240686/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1642753572664/work
-pyrsistent @ file:///Users/runner/miniforge3/conda-bld/pyrsistent_1649013400725/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+pip==22.0.4
+prometheus-client==0.14.0
+prompt-toolkit==3.0.29
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.7
+pyrsistent==0.18.1
+python-dateutil==2.8.2
 pytz==2022.1
 PyYAML==6.0
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1649055699015/work
+pyzmq==22.3.0
 regex==2022.3.15
 requests==2.27.1
 rfc3986==1.5.0
 sacremoses==0.0.49
-Send2Trash @ file:///home/conda/feedstock_root/build_artifacts/send2trash_1628511208346/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+Send2Trash==1.8.0
+setuptools==62.0.0
+six==1.16.0
 sniffio==1.2.0
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1638550740809/work
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1644872665635/work
-testpath @ file:///home/conda/feedstock_root/build_artifacts/testpath_1645693042223/work
+soupsieve==2.3.1
+stack-data==0.2.0
+terminado==0.13.3
+testpath==0.6.0
 tokenizers==0.11.6
 torch==1.11.0
 torchvision==0.12.0
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1648827310178/work
+tornado==6.1
 tqdm==4.64.0
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1635260543454/work
+traitlets==5.1.1
 transformers==4.17.0
 typing_extensions==4.1.1
 urllib3==1.26.9
 voila==0.3.5
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
+wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.3.2
 websockets==10.2
+wheel==0.37.1
 widgetsnbextension==3.6.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1649012893348/work
+zipp==3.8.0
